# raytracer

./: CMakeLists.txt  CMakeSettings.json  README.md
raytracer/: CMakeLists.txt  raytracer.cpp  raytracer.h
src/: CMakeLists.txt  CPUId.cpp  CPUId.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Matrix16f.cpp  Matrix16f.h  PointLight.cpp  PointLight.h  Primitive.cpp  Primitive.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  Vector4f.cpp  Vector4f.h  World.cpp  World.h  camera.h  color.h  fs.glsl  hardware.h  hitrecord.h  light.h  main.cpp  main.h  material.h  math.cpp  math.h  primitives.h  raytrace.glsl  raytracer.cpp  raytracer.h  vs.glsl  world.h
